--- a/DekiApp_pyqt5/Screens/InspectionPlannerScreen_UI.ui
+++ b/DekiApp_pyqt5/Screens/InspectionPlannerScreen_UI.ui
@@ -38,6 +38,9 @@
       </size>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_6">
+      <property name="spacing">
+       <number>5</number>
+      </property>
       <item alignment="Qt::AlignTop">
        <widget class="QLabel" name="label">
         <property name="font">
@@ -113,7 +116,7 @@
            <x>0</x>
            <y>0</y>
            <width>1156</width>
-           <height>765</height>
+           <height>768</height>
           </rect>
          </property>
          <layout class="QVBoxLayout" name="verticalLayout_9">
@@ -165,7 +168,7 @@
 }</string>
         </property>
         <property name="text">
-         <string>Add construction</string>
+         <string>Add new</string>
         </property>
         <property name="icon">
          <iconset resource="../resources.qrc">
@@ -197,8 +200,20 @@
       </size>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_8">
+      <property name="spacing">
+       <number>2</number>
+      </property>
       <property name="leftMargin">
-       <number>9</number>
+       <number>0</number>
+      </property>
+      <property name="topMargin">
+       <number>0</number>
+      </property>
+      <property name="rightMargin">
+       <number>0</number>
+      </property>
+      <property name="bottomMargin">
+       <number>0</number>
       </property>
       <item>
        <widget class="QLabel" name="constructionPicLarge">
@@ -236,6 +251,21 @@
          <enum>QFrame::Raised</enum>
         </property>
         <layout class="QHBoxLayout" name="horizontalLayout_2">
+         <property name="spacing">
+          <number>2</number>
+         </property>
+         <property name="leftMargin">
+          <number>0</number>
+         </property>
+         <property name="topMargin">
+          <number>0</number>
+         </property>
+         <property name="rightMargin">
+          <number>0</number>
+         </property>
+         <property name="bottomMargin">
+          <number>0</number>
+         </property>
          <item>
           <widget class="QFrame" name="frame_6">
            <property name="minimumSize">
@@ -251,6 +281,9 @@
             <enum>QFrame::Raised</enum>
            </property>
            <layout class="QVBoxLayout" name="verticalLayout_10">
+            <property name="spacing">
+             <number>2</number>
+            </property>
             <item>
              <widget class="QLabel" name="label_3">
               <property name="minimumSize">
@@ -451,6 +484,9 @@
             <enum>QFrame::Raised</enum>
            </property>
            <layout class="QVBoxLayout" name="constructionInfoFrameLayout">
+            <property name="spacing">
+             <number>2</number>
+            </property>
             <item>
              <widget class="QLabel" name="constructionName">
               <property name="minimumSize">
