--- a/DekiApp_pyqt5/Screens/cadViewWidgetExtended.ui
+++ b/DekiApp_pyqt5/Screens/cadViewWidgetExtended.ui
@@ -110,10 +110,12 @@ QComboBox{
          <string notr="true">QLabel{
 	font: 75 10pt &quot;Arial&quot;;
 	border: 1px solid rgb(30, 210, 80);
-	
 	background-color: rgb(255, 255, 255);
 }
-</string>
+
+QPushButton::!enabled{
+	background-color: rgb(220, 220, 220);
+}</string>
         </property>
         <property name="frameShape">
          <enum>QFrame::StyledPanel</enum>
@@ -159,6 +161,19 @@ QComboBox{
            </property>
           </widget>
          </item>
+         <item>
+          <spacer name="verticalSpacer">
+           <property name="orientation">
+            <enum>Qt::Vertical</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>20</width>
+             <height>40</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
          <item alignment="Qt::AlignBottom">
           <widget class="QPushButton" name="snapshootBtn">
            <property name="minimumSize">
@@ -195,6 +210,9 @@ QComboBox{
          </item>
          <item alignment="Qt::AlignBottom">
           <widget class="QPushButton" name="fullscreenBtn">
+           <property name="enabled">
+            <bool>false</bool>
+           </property>
            <property name="minimumSize">
             <size>
              <width>0</width>
