--- a/DekiApp_pyqt5/Screens/mainWindow.ui
+++ b/DekiApp_pyqt5/Screens/mainWindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1200</width>
-    <height>885</height>
+    <height>800</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -1247,7 +1247,7 @@
  <resources>
   <include location="../resources.qrc"/>
   <include location="../resources.qrc"/>
-  <include location="C:/Users/Młody/.designer/resources.qrc"/>
+  <include location="../resources.qrc"/>
  </resources>
  <connections/>
 </ui>
