--- a/DekiApp_pyqt5/Screens/new_subconstruction_UI.ui
+++ b/DekiApp_pyqt5/Screens/new_subconstruction_UI.ui
@@ -1627,7 +1627,7 @@ font:  italic 10pt &quot;Calibri&quot;;
            </property>
            <layout class="QVBoxLayout" name="verticalLayout_3">
             <item>
-             <widget class="QLabel" name="label_4">
+             <widget class="QLabel" name="dialogTitleLabel">
               <property name="minimumSize">
                <size>
                 <width>0</width>
@@ -2840,16 +2840,34 @@ font:  italic 10pt &quot;Calibri&quot;;
             </property>
             <item>
              <widget class="QWidget" name="cadViewerContainer" native="true">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
               <property name="minimumSize">
                <size>
                 <width>560</width>
-                <height>300</height>
+                <height>410</height>
+               </size>
+              </property>
+              <property name="maximumSize">
+               <size>
+                <width>16777215</width>
+                <height>410</height>
                </size>
               </property>
              </widget>
             </item>
             <item>
              <widget class="QWidget" name="docsViewerContainer" native="true">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
               <property name="minimumSize">
                <size>
                 <width>560</width>
