--- a/DekiApp_pyqt5/Screens/weldListItem.ui
+++ b/DekiApp_pyqt5/Screens/weldListItem.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>535</width>
-    <height>110</height>
+    <width>540</width>
+    <height>131</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -19,7 +19,7 @@
   <property name="minimumSize">
    <size>
     <width>0</width>
-    <height>110</height>
+    <height>0</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -60,7 +60,7 @@ background-color: rgb(255, 255, 255);
    <item alignment="Qt::AlignTop">
     <widget class="QFrame" name="mainFrame">
      <property name="sizePolicy">
-      <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+      <sizepolicy hsizetype="Expanding" vsizetype="Minimum">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
@@ -112,7 +112,7 @@ background-color: rgb(255, 255, 255);
       <item alignment="Qt::AlignTop">
        <widget class="QFrame" name="frame_2">
         <property name="sizePolicy">
-         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+         <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
@@ -174,6 +174,12 @@ background-color: rgb(255, 255, 255);
               <property name="minimumSize">
                <size>
                 <width>0</width>
+                <height>25</height>
+               </size>
+              </property>
+              <property name="maximumSize">
+               <size>
+                <width>16777215</width>
                 <height>25</height>
                </size>
               </property>
@@ -505,7 +511,7 @@ background-color: rgb(255, 255, 255);
                        </size>
                       </property>
                       <property name="text">
-                       <string>V</string>
+                       <string/>
                       </property>
                       <property name="alignment">
                        <set>Qt::AlignCenter</set>
