--- a/DekiApp_pyqt5/Screens/weld_preview_UI.ui
+++ b/DekiApp_pyqt5/Screens/weld_preview_UI.ui
@@ -47,10 +47,7 @@
    <item>
     <widget class="QWidget" name="Content" native="true">
      <property name="styleSheet">
-      <string notr="true">CustomLineEdit[readOnly=&quot;true&quot;] {
-background-color: rgb(230, 230, 230);}
-CustomLineEdit{
-background-color: rgb(255, 255, 255);}</string>
+      <string notr="true"/>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout">
       <property name="spacing">
@@ -1832,7 +1829,13 @@ QPushButton:checked{
                   <item>
                    <widget class="QFrame" name="frame_5">
                     <property name="styleSheet">
-                     <string notr="true">background-color: rgb(255, 255, 255);</string>
+                     <string notr="true">QPushButton{
+	font: 75 10pt &quot;Arial&quot; bold;
+	color: rgb(255, 255, 255);
+	border-radius: 5px;
+	border: 1px solid rgb(30, 210, 80);
+	background-color: rgb(30, 210, 80);
+}</string>
                     </property>
                     <property name="frameShape">
                      <enum>QFrame::StyledPanel</enum>
@@ -1911,6 +1914,19 @@ QPushButton:checked{
                        </property>
                        <property name="text">
                         <string>Save as new</string>
+                       </property>
+                      </widget>
+                     </item>
+                     <item>
+                      <widget class="QPushButton" name="changeAmountBtn">
+                       <property name="minimumSize">
+                        <size>
+                         <width>0</width>
+                         <height>30</height>
+                        </size>
+                       </property>
+                       <property name="text">
+                        <string>Change amount</string>
                        </property>
                       </widget>
                      </item>
